# rover

./: testCNN.py  v1code.py
BugAlgorithm/motion_plan/: bug.py
UI_App/src/: main.py  ui_layout.py
antenna/: CMakeLists.txt  package.xml  setup.py
antenna/src/: camera_publisher_node.py  camera_subscriber_node.py  get_camera_feed.py
depth_camera_node/: GJK.py  README.md  utils.py
depth_cameranode/: process_depth_camera.py
drive_control/src/: drive_safety_system.py
embedded_bridge/C_API_testing/: platformio.ini
embedded_bridge/C_API_testing/src/: main.cpp
embedded_bridge/src/: serial_interface.py  serial_node.py
human_control_interface/: CMakeLists.txt  package.xml
human_control_interface/src/Controller/: Gamepad.py  GamepadProcess.py  Joystick.py
serialization_interface/: CMakeLists.txt  package.xml
serialization_interface/src/: ArmMotorCommand.h  LidarData.h  ProcessedControllerInput.h  SerializationMain.cpp  WheelSpeed.h
zeromq_int/: CMakeLists.txt  package.xml
zeromq_int/src/: ZeroMQMain.cpp
